kubernetes/virtualservice.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    generation: 1
    labels:
      app.kubernetes.io/name: nodejs-homework
    name: nodejs-homework-vs
    namespace: istio-system
  spec:
    gateways:
    - istio-system/default-gateway
    hosts:
    - nodejs-homework.mydomainname.com
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: nodejs-homework
          port:
            number: 8080
kind: List
